klipper: reduce memory usage when there are many images

Set Image's sourceSize property to reduce memory usage.

Test: Add 3 2048x2048 images, get plasmawindowed's RSS from ps command:
- Before: `before: 246256 after: 389356 diff: 143100`
- After: `before: 246400 after: 321944 diff: 75544`

BUG: 480127
FIXED-IN: 6.3